added your name

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         </div>
       </div>
     </nav>
-    <section class="home-image"></section>
+    <section class="home-image"><div class="nombre">Travis Palmer</div></section>
+      <article>
     <div class="content">
       <section id="background">
         <h1>Background - What have I done!?</h1>
-        <article  id="justTry">
+        <article>
           <p>
             Not much. I've only been alive for 20 years. In that time, I've mainly slept I think. Born in Hudson Wisconsin, I moved to New Zealand when I was about three months old. I lived there for about four years, then we moved back. My whole family, brothers and parents are from New Zealand (I can cover that more in the family section.) Why did I get into programming? Why am I here now? Back in middle school I was curious about how to make a web site and heard about a program called DreamWeaver (horrible program) anyways I played around with that for a bit before heading on a family trip back to New Zealand. There I ended up asking my Cousin how he makes website and he told me just in a text editor, nothing special. This spiked my curiosity in how all this was made and done. It started my first crappy, basic, and inline text css website. I wish I still had a copy of it just to go back and have some laughs about it. I self-taught myself how to make simple websites using HTML and css. I never dove too much into Javascript or php. I did do some when I was in high school. Mainly Javascript because I could make cool visuals or fun interactive things. One other big reason I got going with programming is a game called Roblox. It’s more of an engine then a game. You used their game engine to make simple games (well back then. They’ve gotten pretty damn good and complex now.) with Lego block style graphics. The engine used Lua. So, to create some fun games for my friends and I play I learned how to build with blocks and program in Lua. Now learning Lua was good and all for me but it really messed me up with numbers… For some reason, it’s counting system or whatever it’s called starts at 1 not 0… So that was a bit of a pain but I understand it now and will always through me off when I go back to Lua.
           </p>
