--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </nav>
-    <section class="home-image"><div class="nombre">Travis Palmer</div></section>
+    <section class="home-image"><div class="nombre"><p>Travis Palmer</p></div></section>
       <article>
     <div class="content">
       <section id="background">
